<resources>
    <string name="app_name">SIM</string>
    <string name="nombre_aplicacion">Sistema de Internacion\n y Monitoreo</string>

    <string name="action_settings">Opciones</string>
    <string name="title_activity_login">Ingresar - SIM</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="logo">Logo</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_ecg">Electrocardiograma</string>
    <string name="tag_imageBtnECG">Electrocardiograma</string>
    <string name="openDrawer">Menu abierto</string>
    <string name="closeDrawer">Menu cerrado</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo_registrar_usuario">Registrarse</string>
    <string name="seleccion_rol">Seleccionar Rol</string>

    <string name="volumen">Volumen(ml)</string>
    <string name="tiempo">Tiempo(min)</string>
    <string name="resultadoGotas">Resultado(gotas/min)</string>
    <string name="resultadoVolumen">Resultado(Volumen/min)</string>
    <string name="Saturometria">Saturometria</string>
    <string name="FrecuRepiratoria">Frecuencia Respiratoria</string>
    <string name="Temperatura">Temperatura</string>
    <string name="TensionArterial">Tension Arterial</string>
    <string name="Glucosa">Glucosa</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Dni">DNI</string>
    <string name="Edad">Edad</string>
    <string name="FechaNac">Fecha Nacimiento</string>
    <string name="Telefono">Telefono o Celular</string>
    <string name="Email">Correo Electronico</string>
    <string name="Altura">Altura</string>
    <string name="Peso">Peso</string>
    <string name="Anotacion">Anotacion</string>


    <string-array name="nav_admin_options">
        <item>Home</item>
        <item>Libro Report</item>
        <item>Cerrar Sesion</item>
    </string-array>
    <string-array name="nav_medico_options">
        <item>Home</item>
        <item>Electrocardiograma</item>
        <item>Farmaco</item>
        <item>Libro Report</item>
        <item>Gestion Visitas</item>
        <item>Cerrar Sesion</item>
    </string-array>
    <string-array name="nav_enfermero_options">
        <item>Home</item>
        <item>Electrocardiograma</item>
        <item>Farmaco</item>
        <item>Libro Report</item>
        <item>Signos Vitales</item>
        <item>Glucosa</item>
        <item>Gestion Visitas</item>
        <item>Cerrar Sesion</item>
    </string-array>

    <array name="navigation_iconos_enfermero">
        <item>@mipmap/ic_home</item>
        <item>@mipmap/ic_corazon</item>
        <item>@mipmap/ic_goteo</item>
        <item>@mipmap/ic_libro_report</item>
        <item>@mipmap/ic_signos_vitales</item>
        <item>@mipmap/ic_glucosa</item>
        <item>@mipmap/ic_calendario</item>
        <item>@mipmap/ic_exit</item>
    </array>

    <array name="navigation_iconos_medico">
        <item>@mipmap/ic_home</item>
        <item>@mipmap/ic_corazon</item>
        <item>@mipmap/ic_goteo</item>
        <item>@mipmap/ic_libro_report</item>
        <item>@mipmap/ic_calendario</item>
        <item>@mipmap/ic_exit</item>
    </array>

    <array name="navigation_iconos_admin">
        <item>@mipmap/ic_home</item>
        <item>@mipmap/ic_libro_report</item>
        <item>@mipmap/ic_exit</item>
    </array>
    <string name="title_activity_monitoreo">MonitoreoActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registrar_usuario">Registrar Usuario</string>
    <string name="title_activity_add_new_photo">AddNewPhoto</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
</resources>
