<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#018B7B"
    tools:context="com.example.maxi.sim.LoginActivity">


    <ImageView android:id="@+id/ImgFoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_sim"
        android:contentDescription="@string/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/TxtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/ImgFoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:hint="@string/usuario"
        android:textColorHint="#CFCFCF"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText android:id="@+id/TxtConstraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/TxtUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:hint="@string/contraseña"
        android:textColorHint="#CFCFCF"
         />

    <Button android:id="@+id/BtnLoginIngresar"
        android:text="@string/ingresar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/BtnLoginRegistrarse"
        android:text="@string/registrarse"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/BtnLoginIngresar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
