<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.maxi.sim.RegistrarUsuarioActivity"
    android:background="@color/color_backgroud">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerRol"
        android:layout_centerHorizontal="true">

        <EditText android:id="@+id/EditTxtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/Nombre"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="@color/color_texto"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="180dp"
        android:layout_below="@+id/TiLayoutNombre"
        android:layout_alignRight="@+id/TiLayoutNombre"
        android:layout_alignEnd="@+id/TiLayoutNombre">

        <EditText android:id="@+id/EditTxtDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/Dni"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutFechaNac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TiLayoutDni"
        android:layout_alignLeft="@+id/TiLayoutDni"
        android:layout_alignStart="@+id/TiLayoutDni"
        android:layout_marginStart="180dp"
        android:layout_alignRight="@+id/TiLayoutNombre"
        android:layout_alignEnd="@+id/TiLayoutNombre">

        <EditText android:id="@+id/EditTxtFechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date|text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/FechaNac"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TiLayoutFechaNac"
        android:layout_alignEnd="@+id/TiLayoutFechaNac"
        android:layout_below="@+id/TiLayoutFechaNac"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText android:id="@+id/EditTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress|text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/Email"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TiLayoutEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText android:id="@+id/EditTxtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/usuario"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="@color/color_texto"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TiLayoutUsuario"
        android:layout_alignLeft="@+id/TiLayoutUsuario"
        android:layout_alignStart="@+id/TiLayoutUsuario"
        android:layout_alignEnd="@+id/TiLayoutNombre">

        <EditText android:id="@+id/EditTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="@color/color_texto"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto"
            android:password="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutPasswordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TiLayoutPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText android:id="@+id/EditTxtPasswordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="@color/color_texto"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto"
            android:password="true" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerRol"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/TiLayoutFechaNac"
        android:layout_alignEnd="@+id/TiLayoutFechaNac" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrarse"
        android:id="@+id/btnRegistrarse"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
