<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#010101"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >
    <RelativeLayout
        android:id="@+id/cabeceraLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_secondary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Nuevo Libro Report"
        android:id="@+id/txtPaciente"
        android:textStyle="bold"
        android:textColor="@color/color_texto"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCrearVisita"
            android:src="@drawable/guardar"
            android:background="@color/color_secondary"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/detalleLayout"
        android:layout_below="@+id/cabeceraLayout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_backgroud">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <EditText android:id="@+id/EditTxtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/Nombre"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="@color/color_texto"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TiLayoutNombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <EditText android:id="@+id/EditTxtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/Apellido"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto"
            android:textColorHighlight="@color/color_texto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TiLayoutApellido"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/TiLayoutApellido"
        android:layout_alignEnd="@+id/TiLayoutApellido"
        android:layout_marginRight="200dp">

        <EditText android:id="@+id/EditTxtDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/Dni"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TiLayoutDni"
        android:layout_alignLeft="@+id/TiLayoutDni"
        android:layout_alignStart="@+id/TiLayoutDni"
        android:layout_marginLeft="180dp"
        android:layout_marginStart="180dp"
        android:layout_alignRight="@+id/TiLayoutApellido"
        android:layout_alignEnd="@+id/TiLayoutApellido">

        <EditText android:id="@+id/EditTxtEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/Edad"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TiLayoutDni"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/TiLayoutApellido"
        android:layout_alignEnd="@+id/TiLayoutApellido"
        android:layout_marginRight="200dp">

        <EditText android:id="@+id/EditTxtAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|numberDecimal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/Altura"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TiLayoutAltura"
        android:layout_alignLeft="@+id/TiLayoutAltura"
        android:layout_alignStart="@+id/TiLayoutAltura"
        android:layout_marginLeft="180dp"
        android:layout_marginStart="180dp"
        android:layout_alignRight="@+id/TiLayoutEdad"
        android:layout_alignEnd="@+id/TiLayoutEdad">

        <EditText android:id="@+id/EditTxtPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|numberDecimal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/Peso"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="#ffffffff"
            android:editable="true"
            android:enabled="true"
            android:textColorLink="@color/color_texto" />
    </android.support.design.widget.TextInputLayout>

    </RelativeLayout>


</RelativeLayout>
