<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.maxi.sim.FarmacoFragment"
    android:background="@color/color_backgroud"
    >


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/libroReport"
        android:background="@mipmap/ic_launcher"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutVolumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/libroReport"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="65dp">

        <EditText android:id="@+id/TxtVolumen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/volumen"
            android:textColorHint="@color/color_texto"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="@color/color_texto"
            android:editable="true"
            android:layout_above="@+id/TxtTiempo"
            android:layout_alignRight="@+id/imageButton2"
            android:layout_alignEnd="@+id/imageButton2"
            android:layout_alignLeft="@+id/imageButton"
            android:layout_alignStart="@+id/imageButton"
            android:autoText="false" />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutTiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TiLayoutVolumen"
        android:layout_alignParentLeft="true">

        <EditText android:id="@+id/TxtTiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColorHint="@color/color_texto"
            android:hint="@string/tiempo"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="#ffffffff"
            android:editable="true"
            android:layout_below="@+id/TiLayoutTiempo"
            android:layout_alignLeft="@+id/TxtVolumen"
            android:layout_alignStart="@+id/TxtVolumen"
            android:layout_alignRight="@+id/TxtVolumen"
            android:layout_alignEnd="@+id/TxtVolumen" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calcular"
        android:id="@+id/btnCalcular"
        android:textColor="@color/color_primary"
        android:textStyle="bold"
        android:layout_below="@+id/TiLayoutTiempo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true" />

    <android.support.design.widget.TextInputLayout
    android:id="@+id/TiLayoutResultado"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_below="@+id/btnCalcular"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp">

    <TextView android:id="@+id/TxtResultadoVolumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColorHint="@color/color_texto"
        android:hint="@string/resultadoVolumen"
        android:textStyle="italic"
        android:selectAllOnFocus="true"
        android:textColor="@color/color_texto"
        android:backgroundTint="@color/color_texto"
        android:editable="false"
        android:layout_below="@+id/TiLayoutTiempo"
        android:layout_alignLeft="@+id/TxtVolumen"
        android:layout_alignStart="@+id/TxtVolumen"
        android:layout_alignRight="@+id/TxtVolumen"
        android:layout_alignEnd="@+id/TxtVolumen"
        android:autoText="false"
        android:gravity="bottom" />

</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TiLayoutResultadoGotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TiLayoutResultado"
        android:layout_alignRight="@+id/libroReport"
        android:layout_alignEnd="@+id/libroReport"
        android:layout_marginTop="37dp">

        <TextView android:id="@+id/TxtResultadoGotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColorHint="@color/color_texto"
            android:hint="@string/resultadoGotas"
            android:textStyle="italic"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_texto"
            android:backgroundTint="@color/color_texto"
            android:editable="false"
            android:layout_below="@+id/TiLayoutTiempo"
            android:layout_alignLeft="@+id/TxtVolumen"
            android:layout_alignStart="@+id/TxtVolumen"
            android:layout_alignRight="@+id/TxtVolumen"
            android:layout_alignEnd="@+id/TxtVolumen" />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar"
        android:id="@+id/btnEnviar"
        android:textColor="@color/color_primary"
        android:textStyle="bold"
        android:layout_alignRight="@+id/libroReport"
        android:layout_alignEnd="@+id/libroReport"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TiLayoutResultadoGotas"
        android:layout_marginTop="30dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/factorGoteo"
        android:layout_below="@+id/txtTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:text="Factor Goteo"
        android:textColor="@color/color_texto" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageMacroGota"
        android:background="@drawable/ic_macro_gota"
        android:src="@drawable/ic_macro_gota"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/libroReport" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageMicroGota"
        android:src="@drawable/ic_micro_gota"
        android:visibility="visible"
        android:layout_below="@+id/txtTitulo"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/imageMacroGota" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/txtTitulo"
        android:layout_above="@+id/imageMacroGota"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/color_texto"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
